[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/dialogue_backgroung.png" type="Texture" id=1]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Dialogue.gd" type="Script" id=3]
[ext_resource path="res://DialogueVoicePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://PauseCalculator.tscn" type="PackedScene" id=5]

[node name="Dialogue" type="Control"]
anchor_right = 0.779
anchor_bottom = 0.248
margin_right = 0.303955
margin_bottom = 0.199997
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseCalculator" parent="." instance=ExtResource( 5 )]

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 798.0
margin_bottom = 149.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 10.0
margin_right = 785.0
margin_bottom = 138.0
custom_colors/default_color = Color( 0.4, 0.223529, 0.192157, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueVoicePlayer" parent="." instance=ExtResource( 4 )]

[node name="TypeTyper" type="Timer" parent="."]
wait_time = 0.04

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pause_requested" from="PauseCalculator" to="." method="_on_PauseCalculator_pause_requested"]
[connection signal="finished" from="DialogueVoicePlayer" to="." method="_on_DialogueVoicePlayer_finished"]
[connection signal="timeout" from="TypeTyper" to="." method="_on_TypeTyper_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
